# ml_data_pipeline

./: .gitignore  tasks.py
.github/workflows/: ci.yml
config/: config.yaml  config_dev.yaml  config_prod.yaml
docs/: ml_data_pipeline.html  search.js
docs/ml_data_pipeline/: config.html  data_loader.html  data_transform.html  main.html
docs/ml_data_pipeline/data_transform/: base_transformer.html  factory.html  minmax_scalar_transformer.html  standard_scaler_transformer.html
ml_data_pipeline/: pyproject.toml
src/ml_data_pipeline/: config.py  main.py
src/ml_data_pipeline/data_loader/: __init__.py  csv_loader.py  factory.py  json_loader.py
src/ml_data_pipeline/data_transform/: __init__.py  factory.py  minmax_scalar_transformer.py  standard_scaler_transformer.py
src/ml_data_pipeline/model/: linear_model.py
tests/: test_data_loader.py  test_data_transform.py
