[tool.poetry.scripts]
ml-data-pipeline = "ml_data_pipeline.main:main"

[tool.poetry.group.dev.dependencies]
pdoc = "^15.0.0"
mypy = "^1.13.0"
pandas-stubs = "^2.2.3.241009"
ruff = "^0.7.3"
pytest = "^8.3.3"
invoke = "^2.2.0"

[tool.poetry]
name = "ml-data-pipeline"
version = "0.1.0"
description = ""
authors = ["MJa-6 <mhmdjahmad99@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_data_pipeline", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
omegaconf = "^2.3.0"
pydantic = "^2.9.2"
mypy = "^1.13.0"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
# General mypy settings
ignore_missing_imports = true

# Settings for specific packages
[[tool.mypy.overrides]]
module = "sklearn.preprocessing"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ml_data_pipeline.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F"]
ignore = ["E501"]  # Ignore line length warnings

[tool.ruff.format]
quote-style = "double"  # Like Black, use double quotes for strings.
indent-style = "space"  # Like Black, indent with spaces, rather than tabs.